--- a/styles.css
+++ b/styles.css
@@ -6,49 +6,92 @@
 }
 
 body {
-     font-family: 'Inconsolata', monospace;
-     background: url
+     font-family: 'Alegreya', serif;
+     
 }
 
 video {
-  width: 100%;
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
   position: fixed;
+  top: 0;
+  left: 0;
 }
   
 
 
 main {
-    width: 85%;
-    padding: 2rem 0;
-    border: 1px solid black;
-    border-radius: 10px;
+    width: 40%;
+    background-color:rgba(250, 250, 250, 0.6);
     position: fixed;
-    top: 8%;
-    left: 8%;
+    top: 15%;
+    left: 30%;
+    border-radius: 10px;
+    padding: 2rem 0;
 }
 
+
+/** HEADER **/
 h1,
 p {
     text-align: center;
+    padding-bottom: 10px;
+    font-family: 'Crete Round', serif;  
 }
 
+h1 {
+    color: rgb(211, 97, 105);
+}
+
+p {
+    font-style: italic;
+}
+
+span {
+    color: rgb(211, 97, 105);
+    background-color: rgba(255, 255, 0, 0.7);
+    text-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+}
+
+
+/** FORM INFO **/
+
 form {
-    width: 85%;
     margin: 2rem auto;
-    border: 1px solid blue;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+
+img {
+    width: 140px;
+    height: auto;
+    padding: 1rem 1rem 0 0;
+    filter:drop-shadow(4px 8px 10px rgba(0, 0, 0, 0.5));   
 }
 
 .form-info {
     text-align: end; 
 }
 
-input {
-    width: 150px;
-    padding: 4px 5px;
+label {
+    padding-right: 5px;
 }
 
 .inputbox {
-    padding-top: 10px;
+    padding-top:10px;
 }
+
+input {
+    width: 40%;
+    padding: 4px 5px;
+    border: none;
+    border-radius: 2px;
+    font-family: 'Alegreya', serif;
+}
+
+
+
+/** RESPONSIVE DESIGN **/
+
