--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,101 @@ input {
 }
 
 
+/*FOOTER*/
 
-/** RESPONSIVE DESIGN **/
+footer {
+    width: 40%;
+    position: fixed;
+    bottom: 2%;
+    right: 3%;  
+    
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 14px;
+    color: white;
+    font-weight: 200;
+   
+    
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover{
+    color: rgb(211, 97, 105);
+    text-shadow: 2px 2px 2px #ffffff;
+
+}
+
+
+
+
+
+/** MOBILE RESPONSIVE DESIGN **/
+
+
+@media only screen and (min-width: 320px) and (max-width: 414px){
+
+    main {
+    width: 85%;
+    top: 10%;
+    left: 8%;
+    }
+
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 0.8rem;
+
+    }
+
+    form {
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+
+img {
+    width: 100px;
+    height: auto;
+    padding: 0.5rem 0;
+   
+}
+
+.inputbox {
+    padding-right: 1rem;
+
+}
+
+
+footer {
+    width: 70%;
+    position: fixed;
+    top: 5%;
+    right: 1%;  
+
+}
+
+
+/** TABLET RESPONSIVE DESIGN **/
+
+
+@media only screen and (min-width: 540px) and (max-width: 1119px){
+
+    main {
+    width: 65%;
+    top: 10%;
+    left: 17%;
+}
+
+
+}
+
+
+
 
